Started with Literature Study

--- a/Master_Thesis.tex
+++ b/Master_Thesis.tex
@@ -9,6 +9,8 @@
 
 \usepackage{filecontents,lipsum}
 \usepackage[noadjust]{cite}
+\usepackage{graphicx}
+\graphicspath{{Images/}}
 
 \usepackage[exjobb]{KTHEEtitlepage}
 \usepackage{tocloft}
@@ -113,29 +115,92 @@ The thesis purpose is to investigate an approach for a compiler or mapper to con
 \subsection{Goal}
 The thesis goal is to provide a proof of concept for the reconfigurable protocol processor using grammar based approach.The proof includes the simulation models by transmitting the data trough the reconfigurable architecture and showing the working principle using the metrics.
 
-\clearpage
+
 \subsection{Methodology}
-\clearpage
+
 \subsection{Delimitations}
-\clearpage
+The thesis focus more on showing the proof of concept for one of the protocol i.e Ethernet. The architecture will be developed such that it is easy with minor modification to extend for other protocols like Xio,CPRI,SRIO. Considering all the protocols will not be feasible in this time line.
+
 \subsection{Outline}
+The thesis is organised to provide required details for understanding the overall work.Chapter 2 will provide a detailed description of the technical terminologies and tools used in this thesis.Chapter 3 will provide the implementation details and the results obtained will be explained in chapter 4. The Future work and conclusion are explained in the further chapter 5 and chapter 6.
 
 
-
+\clearpage
      
 
-\section{Theoretical Background}
+\section{Related Work}
+This chapter explains in detail the reconfigurable architectures,Protocols at Data link layer and Grammar based tools.
 
-\clearpage
-\subsection{Reconfigurable Architectures}
-\clearpage
+
+\subsection{Reconfigurable Systems}
+
+ 
+In the field of computer architecture, designers make decisions based on flexibility and performance requirement\cite{JACST518}.ASIC are the least flexible in terms of adapting for any change in the application and GPP are the most flexible as they are independent of the application and the core can be programmed to make the required algorithm work at the cost of higher power and lower efficiency.ASIC and GPP lies in extreme corners of the graph between Flexibility Vs Performance as in Fig.~\ref{fig:Fig1}.Reconfigurable architectures are intended to fill the gap and provide more flexibility in terms of hardware and potentially higher performance than software\cite{JACST518}.
+
+    \begin{figure}[!htb]
+    \centering
+    \includegraphics[scale=0.45]{Fig1}
+    \caption{Flexibility Vs Performance of Hardware Classes}
+    \label{fig:Fig1}
+    \end{figure}
+    
+\subsubsection{Granularity}
+    
+Reconfigurable devices like FPGA(Field Programmable Gate Arrays) have the configurable logic blocks(CLB) which can be configured to map the required functionality. The complexity of the function will not matter but the number of inputs and output of the function has to be considered based on the FPGA architecture. This level of granularity in implementing the functions is called as Fine grained Reconfigurable architecture as it provides the reconfigurable granularity till lowest possible level. These reconfigurable devices are not energy efficient and the execution speed is too less than the ASIC counterpart. Another type of reconfigurable devices are the coarse grained reconfigurable architectures. These devices have the granularity at function levels. They will configure the Function blocks to achieve the efficient algorithm implementation.The Function blocks can vary from constant blocks to complex functions which are commonly used based on the application domain.   
+
+
+\subsubsection{Reconfiguration Models}
+The reconfigurable architectures need configuration of hardware.This can be at compile time or at runtime of an application as in  Fig.~\ref{fig:Fig2}.
+
+ \begin{figure}[!htb]
+     \centering
+     \includegraphics[scale=0.45]{Fig2}
+     \caption{Reconfiguration Models}
+     \label{fig:Fig2}
+    \end{figure}
+    
+In Compile time reconfiguration model, the reconfigurable hardware system is configured at compile time and will be static during the application run time.In this model the programmable logic can be configured to perform some specific task like hardware accelerators to achieve high performance. An FPGA configured to perform floating point multiplication together with a GPP will accelerate the performance of the application if the GPP doesn't have a Floating Point Unit.
+In Run time reconfiguration model, the reconfiguration hardware is configured at run time and will be dynamically programmed to perform different tasks.The decision for making such dynamic reconfiguration has to be embedded coupled with the application and hence it increase the overhead.The Dynamic Reprogrammable Resource Array(DRRA) fabric developed at KTH Electronic System Dept is an example of this model\cite{5351593}.   
+ 
+\subsubsection{Reconfiguration rate}
+The Fine grain Systems will have more reconfiguration data(In FPGAs it is in term of bit streams) which leads to more time and the Coarse Grained Reconfigurable systems will have comparatively less blocks as they have higher granularity and will contain less reconfiguration data.Hence the Coarse Grain architecture will take less time to re configure. This depends on the dynamic reconfiguration architecture whether the complete fabric is reconfigured or partially reconfigured during runtime. 
+
+
 \subsection{Protocols}
-\clearpage
+
+The communication between chips in Radio Base station equipments has many protocols to fulfill the requirements of the specification.The protocols differ by standards.The protocols in Data link layer of the OSI model share some common functionalities.The different protocols being used at Ericsson AB and related to this thesis work are described below:  
+
+\subsubsection{Ethernet}
+Ethernet is a widely used protocol for data communication.It is typically used in Local Area Network(LAN) applications.IEEE organization has standardized the protocol and revise it according to the technological advancement. The recent standard available is from 2012.The standard defines the protocol for different applications and we will consider the communication between chips in this context.  
+
+
+\subsubsection{Xio}
+Xio-s is Ericsson proprietary protocol used for communication between chips
+\subsubsection{CPRI}
+CPRI(Common Public Radio Interface) is an industry cooperation aimed at defining a publicly available specification for the key internal interface of radio base stations between Radio Equipment Control(REC) and the Radio Equipment(RE).It is the co operating work of Ericsson AB,Huawei Technologies Co.Ltd,NEC corporation,Nortel Networks SA and Siemens AG.
+
+\subsubsection{Protocol Functions}
+
+The protocols defined above are the Data link layer protocols.All these protocols have common functions which are necessary to follow the standards.The data also called payload to be transmitted need to be encapsulated or altered based on the protocol definition for successful transmission and similarly in the receiver the data will be obtained based on the protocol.Some of the common protocol functions at this level of abstraction are as below :
+\begin{itemize}
+    \item{CRC Calculation and check}
+    \item{Scrambling and Descrambling}
+    \item{Coding and Decoding}
+    \item{Framer and Deframer}
+    \item{Gearbox}
+    \item{Striping and Aligning}
+    \item{Queues and FIFOs}
+    \item{Counters}
+\end{itemize}
+
 \subsection{Grammar BNF}
+\subsubsection{Antlr}
 \clearpage
-\subsection{Different architectures}
+\subsection{Environment and Tools}
 \clearpage
-\section{Work}
+
+
+\section{Main Technical Work}
 \clearpage
 
 \section{Future Work}
@@ -211,6 +276,30 @@ The thesis goal is to provide a proof of concept for the reconfigurable protocol
     month=apr # "~2",
     publisher={Google Patents},
     note={US Patent 4,508,977}
+}
+
+@article{JACST518,
+    author = {Abida Waza and Roohie Naaz Mir and Hakim Najeeb-ud-din},
+    title = {Reconfigurable Architectures},
+    journal = {Journal of Advanced Computer Science \& Technology},
+    volume = {1},
+    number = {4},
+    year = {2012},
+    keywords = {},
+    abstract = {In the area of computer architecture, designers are faced with the trade-of between flexibility and performance. The architectural choices span a wide spectrum, with general-purpose processors and application specific integrated circuits (ASICs) at opposite ends. General-purpose processors are not optimized to specific applications; they are flexible due to their versatile instruction sets that allow the implementation of every computable task. ASICs are dedicated hardware devices that can achieve higher performance, require less silicon area, and are less power-consuming than instruction-level programmable processors. However, they lack in flexibility. Reconfigurable computer architectures promise to overcome this traditional trade-off and achieve both, the high performance of ASICs and the flexibility of general-purpose processors.},
+    issn = {2227-4332},
+    url = {http://www.sciencepubco.com/index.php/JACST/article/view/518},
+    pages = {337--346}
+
+@INPROCEEDINGS{5351593, 
+    author={Shami, M.A. and Hemani, A.}, 
+    booktitle={ASIC, 2009. ASICON '09. IEEE 8th International Conference on}, 
+    title={Partially reconfigurable interconnection network for dynamically reprogrammable resource array}, 
+    year={2009}, 
+    month={Oct}, 
+    pages={122-125}, 
+    keywords={multiprocessor interconnection networks;reconfigurable architectures;binary encoding;dynamically reprogrammable resource array;innovative regular nonblocking interconnection network;low latency interconnection network;partially reconfigurable interconnection network;point-to-multipoint interconnection network;point-to-point interconnection network;sliding window connectivity;Delay;Energy efficiency;Fabrics;Multiplexing;Multiprocessor interconnection networks;Nearest neighbor searches;Parallel processing;Reconfigurable architectures;Reconfigurable logic;Signal processing algorithms;CGRA;Dynamically Reconfigurable;Interconnects;Partially Reconfigurable}, 
+    doi={10.1109/ASICON.2009.5351593},}
 }
 
 
