fixed the syntax error

--- a/Master_Thesis.tex
+++ b/Master_Thesis.tex
@@ -286,28 +286,28 @@
 								note={US Patent 4,508,977}
 							}
 
-@article{JACST518,
-	author = {Abida Waza and Roohie Naaz Mir and Hakim Najeeb-ud-din},
-	title = {Reconfigurable Architectures},
-	journal = {Journal of Advanced Computer Science \& Technology},
-	volume = {1},
-	number = {4},
-	year = {2012},
-	keywords = {},
-	abstract = {In the area of computer architecture, designers are faced with the trade-of between flexibility and performance. The architectural choices span a wide spectrum, with general-purpose processors and application specific integrated circuits (ASICs) at opposite ends. General-purpose processors are not optimized to specific applications; they are flexible due to their versatile instruction sets that allow the implementation of every computable task. ASICs are dedicated hardware devices that can achieve higher performance, require less silicon area, and are less power-consuming than instruction-level programmable processors. However, they lack in flexibility. Reconfigurable computer architectures promise to overcome this traditional trade-off and achieve both, the high performance of ASICs and the flexibility of general-purpose processors.},
-	issn = {2227-4332},
-	url = {http://www.sciencepubco.com/index.php/JACST/article/view/518},
-	pages = {337--346}
+                        @article{JACST518,
+	                    author = {Abida Waza and Roohie Naaz Mir and Hakim Najeeb-ud-din},
+	                    title = {Reconfigurable Architectures},
+	                    journal = {Journal of Advanced Computer Science \& Technology},
+                    	volume = {1},
+	                    number = {4},
+                    	year = {2012},
+	                    keywords = {},
+	                    abstract = {In the area of computer architecture, designers are faced with the trade-of between flexibility and performance. The architectural choices span a wide spectrum, with general-purpose processors and application specific integrated circuits (ASICs) at opposite ends. General-purpose processors are not optimized to specific applications; they are flexible due to their versatile instruction sets that allow the implementation of every computable task. ASICs are dedicated hardware devices that can achieve higher performance, require less silicon area, and are less power-consuming than instruction-level programmable processors. However, they lack in flexibility. Reconfigurable computer architectures promise to overcome this traditional trade-off and achieve both, the high performance of ASICs and the flexibility of general-purpose processors.},
+	                    issn = {2227-4332},
+	                    url = {http://www.sciencepubco.com/index.php/JACST/article/view/518},
+	                    pages = {337--346}
 
-	@INPROCEEDINGS{5351593, 
-		author={Shami, M.A. and Hemani, A.}, 
-		booktitle={ASIC, 2009. ASICON '09. IEEE 8th International Conference on}, 
-		title={Partially reconfigurable interconnection network for dynamically reprogrammable resource array}, 
-		year={2009}, 
-		month={Oct}, 
-		pages={122-125}, 
-		keywords={multiprocessor interconnection networks;reconfigurable architectures;binary encoding;dynamically reprogrammable resource array;innovative regular nonblocking interconnection network;low latency interconnection network;partially reconfigurable interconnection network;point-to-multipoint interconnection network;point-to-point interconnection network;sliding window connectivity;Delay;Energy efficiency;Fabrics;Multiplexing;Multiprocessor interconnection networks;Nearest neighbor searches;Parallel processing;Reconfigurable architectures;Reconfigurable logic;Signal processing algorithms;CGRA;Dynamically Reconfigurable;Interconnects;Partially Reconfigurable}, 
-		doi={10.1109/ASICON.2009.5351593},}
+                    	@INPROCEEDINGS{5351593, 
+	                	author={Shami, M.A. and Hemani, A.}, 
+	                	booktitle={ASIC, 2009. ASICON '09. IEEE 8th International Conference on}, 
+		                title={Partially reconfigurable interconnection network for dynamically reprogrammable resource array}, 
+		                year={2009}, 
+		                month={Oct}, 
+	                	pages={122-125}, 
+	                	keywords={multiprocessor interconnection networks;reconfigurable architectures;binary encoding;dynamically reprogrammable resource array;innovative regular nonblocking interconnection network;low latency interconnection network;partially reconfigurable interconnection network;point-to-multipoint interconnection network;point-to-point interconnection network;sliding window connectivity;Delay;Energy efficiency;Fabrics;Multiplexing;Multiprocessor interconnection networks;Nearest neighbor searches;Parallel processing;Reconfigurable architectures;Reconfigurable logic;Signal processing algorithms;CGRA;Dynamically Reconfigurable;Interconnects;Partially Reconfigurable}, 
+		                doi={10.1109/ASICON.2009.5351593},}
 }
 
 
@@ -316,4 +316,4 @@
 \bibliography{references}
 \addcontentsline{toc}{section}{References}
 
-end{document}
+\end{document}
